@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Rogério Brito <rbrito@users.sf.net>
 Bugs: mailto:lame-dev@lists.sourceforge.net
 Homepage: http://lame.sourceforge.net/
-Build-Depends: debhelper (>= 5), libncurses5-dev, nasm [i386], libsndfile-dev
+Build-Depends: debhelper (>= 5), libncurses5-dev, nasm [i386], libsndfile1-dev
 Standards-Version: 3.7.3
 
 Package: lame
@@ -22,6 +22,8 @@ Description: open source MP3 encoder
 Package: libmp3lame0
 Architecture: any
 Section: libs
+Conflicts: liblame0
+Replaces: liblame0
 Depends: ${shlibs:Depends}
 Description: shared libraries for MP3 encoding
  Lame is a program which can be used to create compressed
@@ -32,23 +34,10 @@ Description: shared libraries for MP3 encoding
  .
  This package contains the dynamic library.
 
-Package: liblame0
-Architecture: any
-Section: libs
-Depends: libmp3lame0 (= ${binary:Version})
-Description: shared libraries for MP3 encoding
- Lame is a program which can be used to create compressed
- audio files. (Lame aint MP3 encoder). These audio files
- can be played back by popular mp3 players such as mpg123.
- To read from stdin, use "-" for <infile>. To write to
- stdout, use a "-" for <outfile>.
- .
- This is a transitional package.
-
 Package: libmp3lame0-dev
 Architecture: any
 Section: libdevel
-Depends: libmp3lame0 (= ${binary:Version}), libc6-dev
+Depends: libmp3lame0 (= ${binary:Version})
 Conflicts: liblame-dev
 Replaces: liblame-dev
 Description: development files for lame
